# sampledex_daw_windows

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: windows-manual-build.yml
BeatMakerApp/: CMakeLists.txt  run_beatmaker.sh
BeatMakerApp/Source/BeatMakerNoRecord/: BeatMakerNoRecord.cpp  BeatMakerNoRecord.h  CMakeLists.txt
BeatMakerApp/Source/BeatMakerNoRecord/Core/: BeatMakerNoRecordCore.cpp
BeatMakerApp/Source/BeatMakerNoRecord/Editing/: BeatMakerNoRecordEditing.cpp
BeatMakerApp/Source/BeatMakerNoRecord/UI/: BeatMakerNoRecordUI.cpp
BeatMakerApp/Source/common/: Components.cpp
